--- a/index.html
+++ b/index.html
@@ -6,15 +6,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>web-mech</title>
         <link rel="stylesheet" href="css/styles.css">
-        <meta name="description" content="Asteroid tracking and the like." />
+        <meta name="description" content="A mech game." />
         <meta name="keywords" content="mech">
         <meta name="author" content="Niall Slater">
         <meta property="og:image" content="img/og.jpg" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         
         <meta HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE" />
-		
-		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
     </head>
     
