Added fuel slider

--- a/index.html
+++ b/index.html
@@ -70,25 +70,13 @@
 		</div>
 		
 		<div class="panel">
-			<h1>POWER</h1>
-			<div class="slider">50</div><button>BOOST ENGINE</button>
-			<div class="slider">25</div><button>BOOST COOLING</button>
-			<div class="slider">75</div><button>BOOST SCANNERS</button>
+			<h1>FUEL</h1>
+			<div class="slider">
+				<div class="sliderFill" id="slider_Fuel">100</div>
+			</div>
 		</div>
-		<div class="panel">
-			<h1>HEAT</h1>
-			<div class="slider">50</div><button>ADD COOLANT</button>
-			<div class="slider">25</div><button>ADD COOLANT</button>
-			<div class="slider">75</div><button>ADD COOLANT</button>
-		</div>
-		<div class="panel">
-			<h1>TARGETS</h1>
-			<div class="target">50</div><button>AIM</button>
-			<div class="target">25</div><button>AIM</button>
-			<div class="target">75</div><button>AIM</button>
-		</div>
-        
-		<div class="panel">
+		
+		<div class="panel mapWrapper">
 			<h1>MAP</h1>
 			<table class="map" id="map">
 				<tr>
