Added <meter> HTML tag

--- a/index.html
+++ b/index.html
@@ -71,9 +71,7 @@
 		
 		<div class="panel">
 			<h1>FUEL</h1>
-			<div class="slider">
-				<div class="sliderFill" id="slider_Fuel">100</div>
-			</div>
+			<meter class="meter" min="0" value="50" max="100" id="meter_Fuel">100</meter>
 		</div>
 		
 		<div class="panel mapWrapper">
