--- a/index.html
+++ b/index.html
@@ -70,8 +70,10 @@
 		</div>
 		
 		<div class="panel">
-			<h1>FUEL</h1>
-			<meter class="meter" min="0" value="50" max="100" id="meter_Fuel">100</meter>
+			<h2>FUEL</h2>
+			<meter class="meter" min="0" low="25" optimum="100" high="60" value="100" max="100" id="meter_Fuel"></meter>
+			<h2>TEMP</h2>
+			<meter class="meter" min="0" low="35" optimum="45" high="60" value="45" max="100" id="meter_Temp"></meter>
 		</div>
 		
 		<div class="panel mapWrapper">
