--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 					<td></td>
 				</tr>
 			</table>
+			<br/>
+			<button onclick="skipTurn()">WAIT</button>
 		</div>
 		
 		<div class="panel">
