--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>web-mech</title>
+        <title>MECH.OS</title>
         <link rel="stylesheet" href="css/styles.css">
-        <meta name="description" content="A mech game." />
+        <link rel="icon" href="favicon.png">
+        <meta name="description" content="A mech game using only vanilla JS." />
         <meta name="keywords" content="mech">
         <meta name="author" content="Niall Slater">
         <meta property="og:image" content="img/og.jpg" />
@@ -19,7 +20,7 @@
     <body>
         
 		<div class="console" id="gameConsole">
-        	<h1>MECH.OS | v0.7</h1>
+        	<h1>MECH.OS | v<span id="version">0.1</span></h1>
 			<h3>WELCOME TO ZEUS M19-HEAVY COMMAND INTERFACE</h3>
 			<hr />
 			<p>Interface ready.</p>
